--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://PavloPantus.github.io/cra-demo/",
   "name": "cra-demo",
   "version": "0.1.0",
   "private": true,
@@ -7,7 +8,12 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
   },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
+  },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
